# pantheon

./: .env.example  .gitignore  AGENTS.md  AGENTS_OUTSIDE_MUSE_INVESTIGATION.md  CLAUDE.md  README.md  START.md  conftest.py  deploy_server.py  pyproject.toml  run.py
MALWARE/: 6108674530.JS.malicious  Mands_decoded_command.ps1  Mands_decoded_command_stage2.ps1  Numerokeid_body.js  README.md  _rotate_array.js  analyze_array.py  analyze_fieldrva_keys.py  analyze_special_chunks.py  copilot-discoveries.md  debug_decrypt.py  decode_payload.py  decoded_mands_commands.txt  decoded_ps.ps1  decompiled_pGgk.txt  decrypt_payloads.js  discoveries.md  dump_method_il.py  dump_typedef_methods.py  extract_array.js  extract_dotnet_resources.py  extract_fieldrva.py  extract_more_metadata.py  extract_net_metadata.py  find_hidden_message.py  index_111_latin-1.txt  malware_array.json  malware_array_rotated.json  mands_decrypted_latin-1.txt  mands_reconstructed.txt  parse_mands.py  runtime_emulate.js  runtime_emulation.json  scan_for_secrets.py  scan_il_for_field.py  search_all_strings.py  unpadded_strings.txt
adk_apps/: README.md
agents/: README.md  __init__.py  apollo.py  ares.py  ares_assembler.py  ares_containment.py  ares_prevention.py  ares_remediation.py  ares_reviser.py  ares_verifier.py  ares_workflow.py  ares_workflow_support.py  artemis.py  athena.py  hades.py  impact_agent.py  model_config.py  openrouter_client.py  prompts.py  server.py  swarm.py  worker.py  zeus.py
docs/: HACKATHON.md  README.md  demo-judge-walkthrough.md  malware-analysis-6108674530.md  team-update-2026-03-28.md
frontend/: README.md  README_DASHBOARD.md  SETUP.md  package-lock.json  package.json
gateway/: README.md  bot.py  (+3 more)
(+113 files in other folders)
